# claudette

./: .gitignore  AGENTS.md  Makefile  Makefile.new  README.md  list_models.txt  main.py  mcp.txt  pyproject.toml  requirements.txt  setup.py  tools.py
.claudette/: models_config.json
config/: default_models_config.yaml
src/: __init__.py  chatbot.py  completers.py  config.py  image_utils.py  models.py  tools.py  ui.py
src/commands/: __init__.py  base.py  cd_command.py  clear_command.py  conversations_command.py  edit_prompt_command.py  exit_command.py  history_command.py  info_command.py  init_command.py  load_command.py  manager.py  model_command.py  models_command.py  prompt_command.py  pull_command.py  reprompting_command.py  save_command.py  stats_command.py  temperature_command.py  test_command.py  thinking_command.py  unload_command.py  validate_command.py
src/tools_impl/: __init__.py  ask_user_tool.py  base.py  edit_file_tool.py  execute_command_tool.py  get_time_tool.py  list_directory_tool.py  read_file_tool.py  registry.py  web_search_tool.py  write_file_tool.py
src/utils/: __init__.py  conversation.py  git.py  paths.py  stats.py
